--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
             <h2>How May We Help You!</h2>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt consectetuer.</p>
 
-            <form>
+            <form netlify>
                 <input type="text" placeholder="Your Name" required>
                 <input type="email" name="" id="" placeholder="Your Email" required> <br>
                 <input type="tel" name="" id="" placeholder="Phone Number" required>
