--- a/pages/contact.html
+++ b/pages/contact.html
@@ -49,7 +49,7 @@
     <div class="contact">
         <div class="cleft">
            
-            <form data-aos="fade-up" data-aos-duration="3000">
+            <form data-aos="fade-up" data-aos-duration="3000" netlify>
                 <h1> Get In Touch </h1>
                 <div class="input">
                     <input type="text" placeholder="Your Name" required>
